--- a/pom.xml
+++ b/pom.xml
@@ -74,12 +74,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M9</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <suiteXmlFiles>
+                        <!--suppress UnresolvedMavenProperty -->
                         <suiteXmlFile>${xmlFiles}</suiteXmlFile>
                     </suiteXmlFiles>
                     <systemPropertyVariables>
+                        <!--suppress UnresolvedMavenProperty -->
                         <executionBrowser>${browser}</executionBrowser>
                         <appURL>${url}</appURL>
                     </systemPropertyVariables>
